# o-storytelling-app

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
drawio/: 导入删除图书逻辑.drawio
engine/: models.py  server.py
src/: App.vue  components.d.ts  main.ts  quasar.d.ts
src-tauri/: Cargo.lockfes  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: appConfig.rs  mod.rs
src-tauri/src/db/: dbService.rs  dbStart.rs  mod.rs
src-tauri/src/state/: appState.rs  mod.rs
src-tauri/src/tools/: illustrations.rs  mod.rs  process_novel.rs  test.rs  upload.rs
src/components/: HearderTitle.vue  SidebarMenu.vue
src/layouts/: MainLayout.vue  ReadBook.vue
src/pages/: BookCollection.vue  BookDetails.vue  Character.vue  GenerateList.vue
src/routers/: routes.ts
src/styles/: variables.scss
