[package]
name = "o-storytelling-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "o_storytelling_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sherpa-onnx = "0.1.9"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# dialog 
tauri-plugin-dialog = "2"
# mp3转码 wav
hound = "3.5"
# 
tauri-plugin-fs = "2"
tauri-ts-generator = "1.8.1"

rusqlite = { version = "0.39.0", features = ["bundled"] }
